set up project scaffolding for /users/:id endpoint
