# backend/src/api/services/users.ts
@@ -1,0 +1,3 @@
+module.exports.getUserById = () => {
+    // TODO
+}
